<resources>
    <string name="app_name">MobileInventory</string>
    <string name="model">model</string>
    <string name="serial_no">serial_no</string>
    <string name="equipment_type">equipment_type</string>
    <string name="owners_name">owners_name</string>
    <string name="owners_post">owners_post</string>
    <string name="owners_division">owners_division</string>
    <string name="preview_qr_code">preview_qr_code</string>
    <string name="qr_code">qr_code</string>
    <string name="delete_qr_code">Delete QR Code</string>
    <string name="update_qr_code">update QR Code</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="back_to_main_menu">Back To Main Menu</string>
    <string name="back_to_searching">Back to Searching</string>
    <string name="textview">TextView</string>

    <string-array name="choice_array">
        <item>Choice from Serial number</item>
        <item>Choice from user</item>
    </string-array>
</resources>