<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu">

    <Button
        android:id="@+id/GenQRCode"
        android:layout_width="228dp"
        android:layout_height="47dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="92dp"
        android:text="@string/generate_qr_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/updateQRBtn"
        android:layout_width="228dp"
        android:layout_height="47dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="92dp"
        android:text="@string/update_qr_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GenQRCode" />

    <Button
        android:id="@+id/DeleteQRBtn"
        android:layout_width="228dp"
        android:layout_height="47dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="92dp"
        android:text="@string/delete_qr_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateQRBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>